--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+nav {
+  overflow-x: clip; /* or hidden */
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
